--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
     });
     console.log({isAdult});
     // Array.prototype.every() // is everyone 19 or older?
+    const allAdult = people.every(function(person){
+      if(2018 - person.year >= 19){
+        return true;
+      }
 
+    });
+    console.log({allAdult});
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
